--- a/flipclock_copy.html
+++ b/flipclock_copy.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="flipclock_copy.css">
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
         <script src="flipclock_copy.js"></script>        
     </head>
