Testing .gitignore for future use

--- a/flipclock_copy.html
+++ b/flipclock_copy.html
@@ -51,9 +51,32 @@
     </div>
     <div id="total"></div>
 
+<script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
 
     <script type="text/javascript">
+
+
+  // Initialize Firebase
+  // var config = {
+  //   apiKey: "AIzaSyABtGUoDn3GvxXrfRA-bQKLrulCYCoHd_E",
+  //   authDomain: "littlebrother-67da5.firebaseapp.com",
+  //   databaseURL: "https://littlebrother-67da5.firebaseio.com",
+  //   storageBucket: "littlebrother-67da5.appspot.com",
+  //   messagingSenderId: "194837337033"
+  // };
+  // firebase.initializeApp(config);
+
+  // var database = firebase.database();
         var clock;
+        var stamp1;
+        var stamp2;
+        var clockIn;
+        var clockOut;
+        var totalTime;
+        clockedIn = false;
+        var formattedDate1;
+        var formattedDate2;
+        var formattedTime;
         
         $(document).ready(function() {
             
@@ -71,24 +94,63 @@
             });
 
             $('.clockIn').click(function(e) {
+            	if (clockedIn == false) {
                 clock.start();
-                var stamp1 = (moment()._d);
+                stamp1 = (moment()._d);
+                clockIn = moment().format('X');
+                var unixTimeStamp = (clockIn);
+				var timestampInMilliSeconds = unixTimeStamp*1000;
+				var date = new Date(timestampInMilliSeconds);
+				var day = (date.getDate() < 10 ? '0' : '') + date.getDate();
+				var month = (date.getMonth() < 9 ? '0' : '') + (date.getMonth() + 1);
+				var year = date.getFullYear();
+				var hours = ((date.getHours() % 12 || 12) < 10 ? '0' : '') + (date.getHours() % 12 || 12);
+				var minutes = (date.getMinutes() < 10 ? '0' : '') + date.getMinutes();
+				var meridiem = (date.getHours() >= 12) ? 'pm' : 'am';
+				formattedDate1 = day + '-' + month + '-' + year + ' at ' + hours + ':' + minutes + ' ' + meridiem;
                 $('#punchin >tbody').append("<tr><td>" + stamp1 + "</td></tr>");
                 $('#total').hide();
+                clockedIn = true;
+            	} else {
+            		$('.message').html("You're already clocked in!");
+            	}
             });
             $('.clockOut').click(function(e) {
+            	if (clockedIn == true) {
                 clock.stop();
-                var stamp2 = (moment()._d);
+                stamp2 = (moment()._d);
+                clockOut = moment().format('X');
+                var unixTimeStamp = (clockOut);
+				var timestampInMilliSeconds = unixTimeStamp*1000;
+				var date = new Date(timestampInMilliSeconds);
+				var day = (date.getDate() < 10 ? '0' : '') + date.getDate();
+				var month = (date.getMonth() < 9 ? '0' : '') + (date.getMonth() + 1);
+				var year = date.getFullYear();
+				var hours2 = ((date.getHours() % 12 || 12) < 10 ? '0' : '') + (date.getHours() % 12 || 12);
+				var minutes2 = (date.getMinutes() < 10 ? '0' : '') + date.getMinutes();
+				var meridiem = (date.getHours() >= 12) ? 'pm' : 'am';
+				formattedDate2 = day + '-' + month + '-' + year + ' at ' + hours2 + ':' + minutes2 + ' ' + meridiem;
                 $('#punchout >tbody').append("<tr><td>" + stamp2 + "</td></tr>");
                 var totalSeconds = clock.getTime().time;
                 hours = Math.floor(totalSeconds / 3600);
                 totalSeconds %= 3600;
                 minutes = Math.floor(totalSeconds / 60);
                 seconds = totalSeconds % 60;
-                var formattedTime = (hours < 10 ? "0" + hours : hours) + ":" + (minutes < 10 ? "0" + minutes : minutes) + ":" + (seconds  < 10 ? "0" + seconds : seconds);
+                formattedTime = (hours < 10 ? "0" + hours : hours) + ":" + (minutes < 10 ? "0" + minutes : minutes) + ":" + (seconds  < 10 ? "0" + seconds : seconds);
                 // var formattedTime = hours + ':' + minutes + ':' + seconds;
                 console.log(formattedTime);
                 $('#total').show().text(formattedTime);
+                clockedIn = false;
+
+                //may need to be added to other people's code
+                // database.ref().push({
+                // 	clockIn: formattedDate1,	
+                // 	clockOut: formattedDate2,
+                // 	totalTime: formattedTime
+                // });
+            	} else {
+            		$('.message').html("You're not clock in!");
+            	}
             });
 
         });
